@@ -7,6 +7,8 @@ documents those changes that are of interest to users and admins.
    default names.
  - sched/wiki - Fix logic to be compatable with select/cons_res plugin
    for allocating individual processors within nodes.
+ - Fix job end time calculation when changed from an initial value of 
+   INFINITE.
  
 * Changes in SLURM 1.1.31
 =========================
